(WIP) First Cut Load CDK with E2E Destination